Composer won't break long tags bug 103207 patch=tmutreja@netscape.com r=akkana sr=jst